2022-12-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha03: FOMO';git push
	git tag -a 5.1.4-alpha03 -m 'ncremap: rgr rst, dpt_mdp drv';git push --tags

	* Interpolating MPAS-O (depth-MRV) restart files appears to work

2022-12-14  Charlie Zender  <zender@uci.edu>

	* Construct dpt_mdp from depth-MRV layerThickness, bottomDepth

2022-12-13  Charlie Zender  <zender@uci.edu>

	* ncremap add --dpt_nm option

	* Default MPAS-O monthly output interpolates correctly, restarts need to construct zMid

	* Omit all MPAS profiles derived for spatiallly aggregated horizontal regions

2022-12-12  Charlie Zender  <zender@uci.edu>

	* ncclimo add buid enviroment variables on Compy

	* Output 3D depth/height variable

	* Account for memory ordering when consructing mlc_in

	* Die if memory ordering of depth/height field differs between input and output

	* Exclude vertical dimensions from allowed horizontal dimensions

	* Interpolate interface and midpoint depth fields to same 1D output grid

2022-12-11  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha02: Humerus';git push
	git tag -a 5.1.4-alpha02 -m 'all: no cmp NC_STRING, NC_VLEN; ncremap: dpt ntp, drv mlc dpt_ntf';git push --tags

	* nco_ntp_vrt() produces reasonable-looking 3D -> 1D depth interpolation

2022-12-10  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() creates legible (though incorrect) output files!

	* Check for presence of run-time extensive variables adding to exclusion list

2022-12-08  Charlie Zender  <zender@uci.edu>

	* Include depth in min/max vertical coordinate search

	* Construct maxLevelCell if necessary

2022-12-04  Charlie Zender  <zender@uci.edu>

	* Read dpt_in from external, functionalize nco_xtr_var_get()

2022-12-02  Charlie Zender  <zender@uci.edu>

	* Add stubs to handle (MPAS) depth-coordinate grids
